--- a/force-app/main/default/classes/CoolClass.cls
+++ b/force-app/main/default/classes/CoolClass.cls
@@ -1,5 +1,5 @@
 public with sharing class CoolClass {
     public CoolClass() {
-        system.debug('grr');
+        system.debug('grsssr');
     }
 }
